# cpp20_modules_example

./: CMakeLists.txt  a.cppm  b.cppm  main.cpp
